# distributed-search-engine-simulator-c

./: CMakeLists.txt  NOTICE  README.md
include/: config.h  dse_sim.h  types.h
include/agent/: agent.h
include/collection/: actor.h  collection.h  index.h
include/components/logical/: shard.h  worker.h
include/components/physical/: cpu.h  disk.h  ram.h
include/event/: clock.h  continuation.h  pq.h
include/generator/: workload.h
include/profiler/: profiler.h
include/requests/: request.h
include/util/: bounded_queue.h  dynarray.h  json_scan.h  pool.h  rng.h
src/: main.c
src/agent/: agent.c
src/collection/: actor.c  collection.c  index.c
src/components/logical/: shard.c  worker.c
src/components/physical/: cpu.c  disk.c  ram.c
src/event/: clock.c  pq.c
src/generator/: workload.c
src/profiler/: profiler.c
src/requests/http/: get.c  put.c  search.c
src/util/: json_scan.c  rng.c
